--- a/templates/index.html
+++ b/templates/index.html
@@ -79,9 +79,9 @@ input::-webkit-input-placeholder {
 			</div>
 
 			<form action="{{ url_for('predict')}}" method="post" class="contact100-form validate-form">
-				<p><b>By : Tejas T A |</b></p>
-				<p><b> Email - tejasta@gmail.com |</b></p>
-				<b><a href="https://www.linkedin.com/in/tejasta/" target="_blank"> LinkedIn - Click here</a></b><hr>
+				<p><b>Tejas T A |</b></p>
+				<p><b>Mail - tejasta@gmail.com |</b></p>
+				<a href="https://www.linkedin.com/in/tejasta/" target="_blank"> LinkedIn - Click here</a><br><hr>
 				
 				<!--1-->
 				<div class="wrap-input100 validate-input">
