Changed LinkedIn profile link

--- a/templates/index.html
+++ b/templates/index.html
@@ -83,7 +83,7 @@ input::-webkit-input-placeholder {
 			<form action="{{ url_for('predict')}}" method="post" class="contact100-form validate-form">
 				<p><b>By : Tejas T A |</b></p>
 				<p><b> Email - tejasta@gmail.com |</b></p>
-				<b><a href="https://www.linkedin.com/in/tejasta/" target="_blank"> LinkedIn - Click here</a></b><br><hr>
+				<b><a href="https://www.linkedin.com/in/tejas-ta/" target="_blank"> LinkedIn - Click here</a></b><br><hr>
 				<p><em>Note: Hover over the fields to understand more about the inputs required</em><br>
 				
 				<!--1-->
