Changed LinkedIn profile URL

--- a/templates/result.html
+++ b/templates/result.html
@@ -90,7 +90,7 @@ a:active {
 				
 				<div class>
 					<b>Email - tejasta@gmail.com |
-					<a href="https://www.linkedin.com/in/tejasta/" target="blank"> LinkedIn - Click here</a></b>
+					<a href="https://www.linkedin.com/in/tejas-ta/" target="blank"> LinkedIn - Click here</a></b>
 				</div>
 
 			</form>
